--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 <div class="container">
   <h1>Instagram Carousel Creator</h1>
 
